# STLinux.BSP-Duckbox

./: .gitignore  Kconfig  README.md
configs/: ptxconfig  ptxconfig_e2_gstreamer  ptxconfig_e2_libeplayer  ptxconfig_xbmc_gstreamer
configs/duckbox-atevio7500-master/: collectionconfig  linux-sh4-2.6.32.46_stm24_0209_atevio7500.config  platformconfig  ptxconfig
configs/duckbox-spark-master/: collectionconfig  linux-sh4-2.6.32.59_stm24_0211_spark.config  platformconfig  (+1 more)
local_src/libs/gst-plugins-dvbmediasink/src/: Makefile.am  Makefile.in  gstdvbaudiosink.c  gstdvbaudiosink.h  gstdvbsink-marshal.list  gstdvbvideosink.c  gstdvbvideosink.h  libgstdvbaudiosink.la  libgstdvbaudiosink_la-gstdvbaudiosink.lo  libgstdvbaudiosink_la-gstdvbsink-marshal.lo  libgstdvbvideosink.la  libgstdvbvideosink_la-gstdvbsink-marshal.lo  libgstdvbvideosink_la-gstdvbvideosink.lo
local_src/libs/gst-plugins-dvbmediasink/src/.deps/: libgstdvbaudiosink_la-gstdvbaudiosink.Plo  libgstdvbaudiosink_la-gstdvbsink-marshal.Plo  libgstdvbvideosink_la-gstdvbsink-marshal.Plo  libgstdvbvideosink_la-gstdvbvideosink.Plo
local_src/libs/gst-plugins-dvbmediasink/src/.libs/: libgstdvbaudiosink.exp  libgstdvbaudiosink.la  libgstdvbaudiosink.lai  libgstdvbaudiosink.ver  libgstdvbvideosink.exp  libgstdvbvideosink.la  libgstdvbvideosink.lai  libgstdvbvideosink.ver
local_src/libs/libeplayer3/: AUTHORS  Makefile.am  README  aclocal.m4  configure.ac
local_src/libs/libeplayer3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
local_src/libs/libeplayer3/container/: container.c  container_ass.c  container_ffmpeg.c  text_srt.c  text_ssa.c
local_src/libs/libeplayer3/include/: common.h  container.h  manager.h  misc.h  output.h  pcm.h  pes.h  playback.h  subtitle.h  writer.h
local_src/libs/libeplayer3/manager/: audio.c  manager.c  subtitle.c  video.c
local_src/libs/libeplayer3/output/: linuxdvb.c  output.c  output_subtitle.c
local_src/libs/libeplayer3/output/writer/: aac.c  ac3.c  divx.c  dts.c  flac.c  framebuffer.c  h263.c  h264.c  misc.c  mp3.c  mpeg2.c  pcm.c  pes.c  vc1.c  vorbis.c  wma.c  wmv.c  writer.c
local_src/libs/libeplayer3/playback/: playback.c
local_src/libs/libeplayer3/tools/: eplayer2.c  meta.c
local_src/libs/libstgles/: .gitignore  Makefile.am  configure.ac  libstgles.pc
local_src/libs/libstgles/api/: common.h  eglcore.c  glcore.c
local_src/libs/libstgles/demo/: dfbtest.c  egltest.c
local_src/libs/libstgles/includes/EGL/: egl.h  eglext.h  eglplatform.h
local_src/libs/libstgles/includes/GLES/: gl.h  glext.h  glplatform.h
local_src/tools/hotplug/: ChangeLog  Makefile.am  Makefile.in  README  TODO  bdpoll.c  bdpoll.h  configure.ac  hotplug.c  hotplug_basename.c  hotplug_basename.h  hotplug_devpath.c  hotplug_devpath.h  hotplug_pidfile.c  hotplug_pidfile.h  hotplug_setenv.c  hotplug_setenv.h  hotplug_socket.c  hotplug_socket.h  hotplug_timeout.c  hotplug_timeout.h  hotplug_util.c  hotplug_util.h  module_block.c  module_block.h  module_firmware.c  module_firmware.h  module_ieee1394.c  module_ieee1394.h  module_pci.c  module_pci.h  module_scsi.c  module_scsi.h  module_usb.c  module_usb.h  udev_version.h
patches/: host-opkg-0.2.0  host-opkg-r649
rules/: aio-grab.in  aio-grab.make  attr.make  autofs-init.in  autofs.in  autofs.make  autologin.in  autologin.make  av-firmware.in  av-firmware.make  avahi-script-init.in  avahi-script.make  boost.make  bootlogo.in  bootlogo.make  bpa2dump.in  bpa2dump.make  busybox-mdev-bbinit.make  busybox-mdev-init.in  busybox-mdev-init.make  busybox-udhcpc-init.in  busybox-udhcpc-init.make  custom-time-init.in  custom-time.in  custom-time.make  directfb.in  directfb.make  driver-avs-init.in  driver-avs.in  driver-avs.make  driver-bpamem-init.in  driver-bpamem.in  driver-bpamem.make  driver-cec-init.in  driver-cec.make  driver-cic-ufs9xx-init.in  driver-cic-ufs9xx.make  driver-cpufrequ-init.in  driver-cpufrequ.make  driver-e2proc-init.in  (+219 more)
src/: vid_firmware-dev-hv10-18.1.tgz
src_ext/: ACF_firmware-dev-BL028_4-78.tgz
(+1719 files in other folders)
