bin_PROGRAMS = hotplug

hotplug_SOURCES = bdpoll.c \
        hotplug.c hotplug_basename.c hotplug_devpath.c hotplug_pidfile.c \
        hotplug_setenv.c hotplug_socket.c hotplug_timeout.c hotplug_util.c \
        module_block.c module_firmware.c module_ieee1394.c \
        module_pci.c module_scsi.c module_usb.c \
        udev_sysdeps.c udev_sysfs.c udev_utils.c udev_utils_string.c

